--- a/style1.css
+++ b/style1.css
@@ -48,7 +48,7 @@ p {
 
 @media screen and (prefers-color-scheme: dark) {
     body {
-      background: black;
+      background: rgb(150, 135, 135);;
       color: white;
         }
   }
