--- a/style1.css
+++ b/style1.css
@@ -48,8 +48,8 @@ p {
 
 @media screen and (prefers-color-scheme: dark) {
     body {
-      background: rgb(150, 135, 135);;
-      color: white;
+      background: bisque;
+      color: black;
         }
   }
 
