--- a/style1.css
+++ b/style1.css
@@ -52,7 +52,12 @@ p {
       color: black;
         }
   }
-
+@media screen and (prefers-color-scheme: light) {
+    body {
+        background: bisque;
+        color: black;
+    }
+}
 .theme-dark {
     background: rgb(150, 135, 135);
     color: white;
